@@ -31,9 +31,9 @@ dependencies {
     implementation ('org.apache.httpcomponents:httpclient:4.5.14') {
         exclude group: 'commons-logging', module: 'commons-logging'
     }
-    implementation 'org.apache.logging.log4j:log4j-core:2.23.1'
+    implementation 'org.apache.logging.log4j:log4j-core:2.24.0'
     implementation 'com.oracle.database.jdbc:ojdbc11:23.5.0.24.07'
-    implementation 'org.springframework:spring-jdbc:6.1.11'
+    implementation 'org.springframework:spring-jdbc:6.1.12'
 
     /*
     implementation 'org.incenp:sssom-core:0.7.9'
